# netflix-service

./: .env  Cargo.toml  Dockerfile  README.md  requests.http
src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs  tmdb_client.rs
tests/: integration_tests.rs  unit_tests.rs
tests/integration/: api_tests.rs  mock_tmdb_client.rs  mod.rs
tests/unit/: error_tests.rs  mod.rs  model_tests.rs
