[package]
name = "netflix-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8"
dotenv = "0.15.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"]}
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
axum-test = "18.7.0"
dotenv = "0.15.0"
